[package]
name = "voila-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
borsh = "0.9.1"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.71"
solana-program = "1.9.6"
solana-sdk = "1.9.6"
solana-client = "1.9.6"
solana-account-decoder = "1.9.6"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
voila-nft = { path = "../nft", features = ["no-entrypoint", "metaplex"] }