[package]
name = "voila-nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
num-derive = "0.3"
num-traits = "0.2"
metaplex-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
serde = { version = "1.0", features = ["derive"] }
solana-program = "1.10.2"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[features]
default = ["metaplex"]
metaplex = []
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
