[package]
name = "voila-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
borsh = "0.9.3"
borsh-derive = "0.9.3"
num-derive = "0.3"
num-traits = "0.2"
bincode = "1.3.3"
js-sys = "0.3.53"
thiserror = "1.0"
arrayref = "0.3.6"
bytemuck = "1.7.2"
bs58 = "0.3.1"
console_error_panic_hook = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
zerocopy = "0.3.0"
solana-program = "1.10.5"
spl-token = "3.3.0"
voila-nft = { path = "../nft" }

[dev-dependencies]
wasm-bindgen-test = "0.3.26"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

